<resources>
    <string name="app_name">Remember</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="ruang_ghibah">RUANG GHIBAH</string>
    <string name="logo">LOGO</string>
    <string name="background">background</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="registers">REGISTER</string>
    <string name="phone">Phone</string>
    <string name="pass">Password</string>
    <string name="e_mail">E-Mail</string>
    <string name="todo">TODO</string>
    <string name="e_mail1">E-mail</string>
    <string name="homebg">TODO</string>
    <string name="chatting">CHATTING</string>
    <string name="talky_talky">Talky Talky</string>
    <string name="setting">SETTING</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sedang_mencari_user_lain">Sedang Mencari User Lain ...</string>
    <string name="img">img</string>
    <string name="ketik">ketik</string>
    <string name="namauser">Ilham Rahmana</string>
    <string name="send">send</string>
    <string name="foto_profile">foto profile</string>
    <string name="kembali">kembali</string>
    <string name="ketik_pesan">ketik pesan</string>
    <string name="sedang_mencari_teman_chat">Sedang Mencari Teman Chat ...</string>
    <string name="assalammualaikum">Assalammualaikum,..</string>
    <string name="melly">Melly</string>
    <string name="waalikumsalam">Waalikumsalam..</string>
    <string name="hai_mell_salam_kenal">Hai mell, salam kenal</string>
    <string name="salam_kenal_juga_ilham">Salam kenal juga ilham</string>
    <string name="obrolan">Obrolan</string>
    <string name="cari_teman_chat">Cari Teman Chat</string>
    <string name="prof">prof</string>
    <string name="profile">PROFILE</string>
    <string name="nama">Username</string>
    <string name="status_massage">Status Massage</string>
    <string name="birthday">Birthday</string>
    <string name="backgr">backgr</string>
    <string name="back">TODO</string>
    <string name="bg1">bg1</string>
</resources>
